fixed some spacing

--- a/base.css
+++ b/base.css
@@ -132,7 +132,7 @@ li {
     }
 
     #profile {
-        margin-bottom: 10vh;
+        margin-bottom: 5vh;
     }
 
     #profile > img {
